--- a/Projects/apple/style.css
+++ b/Projects/apple/style.css
@@ -46,7 +46,6 @@ nav{
   
   background-color:rgb(25,46,75);
   background-image:url(https://i.pinimg.com/originals/5b/bc/11/5bbc11d7852485126c992135005efd9d.png);
-  opacity:0.5;
   background-repeat:no-repeat;
   background-position:center;
   background-size:cover;
@@ -74,7 +73,7 @@ nav{
   overflow:hidden;
 }
 #desc{
-  text-align:center;  
+  text-align:right;  
   margin:60px 0;
 }
 .description-container{
@@ -188,7 +187,7 @@ nav .navbar-header button{
 	position: fixed;
 	right: 20px;
 	bottom: 20px;
-	background: #2196F3;
+	background: #17191b;
 	border-radius: 30px;
   font-size:32px;
   color:white;
