--- a/Projects/port/styles.css
+++ b/Projects/port/styles.css
@@ -1,22 +1,25 @@
-body{
+body {
     margin: 0;
     height: 100vh;
     display: grid;
     place-items: center;
-    background: :black;
+    background: black;
 }
-img{
+
+img {
     width: 100%;
 }
 
-.card{
+.card {
     width: 30vw;
     position: relative;
 }
 
-.tittle{
-    inset: 0;
+.title {
+    border-radius: 50px;
     position: absolute;
+    top: 0; /* Defina a posição superior desejada */
+    left: 0; /* Defina a posição esquerda desejada */
 }
 
 .inner img {
@@ -25,10 +28,22 @@ img{
     border-radius: 8px;
 }
 
-.card:hover .inner{
-  transform: perspective(900px) translateY(-5) rotateX(25deg) translateZ(0);
+.card:not(:hover) .inner {
+    transform: translateY(-5px) rotateX(25deg) translateZ(0);
+  transition: all 1s;
 }
 
-.card:hover .tittle{
-  transform: all 0.5s;
+.card:not(:hover) .title {
+    transform: scale(1); /* Exemplo de transformação - ajuste conforme necessário */
+    transition: all 1s; /* Adicione uma transição suave */
+}   
+
+.card:hover .inner {
+    transform: perspective(1800px) translateY(-5px) rotateX(25deg) translateZ(0); 
+  transition: all 1s;
 }
+
+.card:hover .title {
+    transform: scale(1.2); /* Exemplo de transformação - ajuste conforme necessário */
+    transition: all 1s; /* Adicione uma transição suave */
+}   
